fix-scss-issues: Align cmspage with Bootstrap data-bs-theme attribute
  - Replace data-theme with data-bs-theme throughout _variables.scss, _theme-switcher.scss and theme_switcher.html
  - Remove duplicate .collapsing-button-width block from cmspage.scss
  - Reduce .block-title from 4.0rem to var(--cp-block-title-size, 2.5rem)
  - Recompile cmspage.css with all changes

--- a/cmspage/scss/cmspage.scss
+++ b/cmspage/scss/cmspage.scss
@@ -174,17 +174,6 @@
   color: var(--heading-color);
 }
 
-@media (min-width: $breakpoint-lg) {
-  .collapsing-button-width {
-    width: 50%;
-  }
-}
-
-.collapsing-button-width {
-  width: 100%;
-  color: var(--heading-color);
-}
-
 .overlay-text-left {
 }
 
@@ -307,7 +296,7 @@
 }
 
 .block-title {
-  font-size: 4.0rem;
+  font-size: var(--cp-block-title-size, 2.5rem);
   color: var(--heading-color);
 }
 
